feat: implement PySpark data processing pipeline with analytical jobs and Java runtime configuration